add site.baseurl to next button at bottom of each page.

--- a/basic/index.html
+++ b/basic/index.html
@@ -730,7 +730,7 @@ nothing to commit (working directory clean)
        dangerous option and is not working directory safe. Any changes not committed will
        be lost.
     </p>
-    
+
 <pre>
 <b>$ git status</b>
 # On branch master
@@ -970,5 +970,4 @@ Dropped stash@{1} (0b1478540189f30fef9804684673907c65865d8f)
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/branching">On to Branching and Merging &#187;</a></p>
-
+<p><a class="page-button next-page" href="{{ site.baseurl }}/branching">On to Branching and Merging &#187;</a></p>
