--- a/branching/index.html
+++ b/branching/index.html
@@ -150,7 +150,7 @@ README   hello.rb more.txt test.txt
       <small>see the last commit on each branch</small>
     </h4>
 
-    <p>If we want to see last commits on each branch 
+    <p>If we want to see last commits on each branch
     we can run <code>git branch -v</code> to see them.</p>
 
 <pre>
@@ -860,5 +860,4 @@ From git://github.com:example-user/example-repo
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/remotes">On to Sharing and Updating Projects &#187;</a></p>
-
+<p><a class="page-button next-page" href="{{ site.baseurl }}/remotes">On to Sharing and Updating Projects &#187;</a></p>
