--- a/creating/index.html
+++ b/creating/index.html
@@ -139,4 +139,4 @@ config      index       <span class="blue">objects</span>
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/basic">On to Basic Snapshotting &#187;</a></p>
+<p><a class="page-button next-page" href="{{ site.baseurl }}/basic">On to Basic Snapshotting &#187;</a></p>
