--- a/zh/basic/index.html
+++ b/zh/basic/index.html
@@ -641,5 +641,4 @@ M hello.rb
   </div>
 </div>
 
-<p><a href="/zh/branching">到 分支与合并 &#187;</a></p>
-
+<p><a href="{{ site.baseurl }}/zh/branching">到 分支与合并 &#187;</a></p>
