--- a/zh/branching/index.html
+++ b/zh/branching/index.html
@@ -696,5 +696,4 @@ ab5ab4c added erlang
   </div>
 </div>
 
-<p><a href="/zh/remotes">到 分享与更新项目 &#187;</a></p>
-
+<p><a href="{{ site.baseurl }}/zh/remotes">到 分享与更新项目 &#187;</a></p>
