--- a/zh/creating/index.html
+++ b/zh/creating/index.html
@@ -120,4 +120,4 @@ config      index       <span class="blue">objects</span>
   </div>
 </div>
 
-<p><a href="/zh/basic">接下来：基本快照 &#187;</a></p>
+<p><a href="{{ site.baseurl }}/zh/basic">接下来：基本快照 &#187;</a></p>
