--- a/zh/remotes/index.html
+++ b/zh/remotes/index.html
@@ -318,4 +318,4 @@ fast-forwards' section of 'git push --help' for details.
   </div>
 </div>
 
-<p><a href="/zh/inspect">到 检查与比较&#187;</a></p>
+<p><a href="{{ site.baseurl }}/zh/inspect">到 检查与比较&#187;</a></p>
