--- a/index.html
+++ b/index.html
@@ -109,4 +109,4 @@ layout: reference
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/creating">On to Getting and Creating Projects &#187;</a></p>
+<p><a class="page-button next-page" href="{{ site.baseurl }}/creating">On to Getting and Creating Projects &#187;</a></p>
