--- a/remotes/index.html
+++ b/remotes/index.html
@@ -151,7 +151,7 @@ github	git@github.com:schacon/hw.git (push)
       <small>rename remote aliases</small>
     </h4>
 
-    <p>If you want to rename remote aliases without having to delete them and add them again 
+    <p>If you want to rename remote aliases without having to delete them and add them again
     you can do that by running <code>git remote rename [old-alias] [new-alias]</code>. This will
     allow you to modify the current name of the remote.</p>
 
@@ -437,4 +437,4 @@ fast-forwards' section of 'git push --help' for details.
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/inspect">On to Inspection and Comparison &#187;</a></p>
+<p><a class="page-button next-page" href="{{ site.baseurl }}/inspect">On to Inspection and Comparison &#187;</a></p>
