missed one link missing baseurl on home page

--- a/zh/index.html
+++ b/zh/index.html
@@ -79,4 +79,4 @@ layout: zh_reference
   </div>
 </div>
 
-<p><a href="/zh/creating">接下来：获取与创建项目&#187;</a></p>
+<p><a href="{{ site.baseurl }}/zh/creating">接下来：获取与创建项目&#187;</a></p>
