Propose fix typo

--- a/inspect/index.html
+++ b/inspect/index.html
@@ -91,7 +91,7 @@ b532581 make "git unpack-file" a built-in
 d43427d Documentation/remote-helpers: Fix typos and improve language
 272a36b Fixup: Second argument may be any arbitrary string
 b6c8d2d Documentation/remote-helpers: Add invocation section
-5ce4f4e Documentation/urls: Rewrite to accomodate transport::address
+5ce4f4e Documentation/urls: Rewrite to accommodate transport::address
 00b84e9 Documentation/remote-helpers: Rewrite description
 03aa87e Documentation: Describe other situations where -z affects git diff
 77bc694 rebase-interactive: silence warning when no commits rewritten
@@ -418,7 +418,7 @@ index bb86f00..192151c 100644
     <p>That's what we're looking for, but we don't want to have to figure out
     what commit the two branches diverged from every time. Luckily, Git has a
     shortcut for this. If you run <code>git diff master...erlang</code> (with
-	three dots in between the branch names), Git will automatically figure out
+        three dots in between the branch names), Git will automatically figure out
     what the common commit (otherwise known as the "merge base") of the two
     commit is and do the diff off of that.</p>
 
