--- a/zh/inspect/index.html
+++ b/zh/inspect/index.html
@@ -81,7 +81,7 @@ b532581 make "git unpack-file" a built-in
 d43427d Documentation/remote-helpers: Fix typos and improve language
 272a36b Fixup: Second argument may be any arbitrary string
 b6c8d2d Documentation/remote-helpers: Add invocation section
-5ce4f4e Documentation/urls: Rewrite to accomodate transport::address
+5ce4f4e Documentation/urls: Rewrite to accommodate transport::address
 00b84e9 Documentation/remote-helpers: Rewrite description
 03aa87e Documentation: Describe other situations where -z affects git diff
 77bc694 rebase-interactive: silence warning when no commits rewritten
